Add animated weather icons

--- a/my-app/src/Weather.css
+++ b/my-app/src/Weather.css
@@ -29,10 +29,9 @@
   list-style: none;
 }
 
-.Weather img {
-  height: 64px;
-  width: 64px;
-  margin-right: 10px;
+.Weather canvas {
+  margin-right: 5px;
+  margin-top: 5px;
   display: inline-block;
 }
 
@@ -52,4 +51,13 @@
   line-height: 1;
   top: -34px;
   margin-left: 0px;
+}
+
+.float-left {
+  float: left;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
